feat(translations/roi): Add ability to load md versions of translations instead of translations as a json.
  This is very useful for large content blocks and more control over markdown formatting. Has been tested, but still may be a bit glitchy. Allows injection of html elements, ojs inputs, etc.

--- a/notebooks/roi/notebook.qmd
+++ b/notebooks/roi/notebook.qmd
@@ -25,6 +25,8 @@ import {
   filterableDataTable as atlasTable,
   sparkbar,
 } from "/helpers/atlasTable.ojs";
+
+import { renderMarkdownWithSlots } from "/helpers/mdTranslate.ojs";
 ```
 
 ```{ojs}
@@ -487,15 +489,30 @@ indicatorSelector = {
 
 `{ojs} _lang(nbText.methods.intro)`
 
-# `{ojs} appendix` {#appendix}
+```{ojs}
+methodFiles = new Object({
+  "en": FileAttachment("/data/economicReturns/translations/methods-en.md"),
+  "fr": FileAttachment("/data/economicReturns/translations/methods-fr.md")
+})
 
-# Source code {#source-code .hidden}
+{
+  const key = masterLanguage.key
+  const md_content = await methodFiles[key].text()
+  return renderMarkdownWithSlots(
+    md_content,
+    {},
+  );
+}
+```
+
+# `{ojs} appendix` {#appendix .hidden}
+
+## Source code {#source-code}
 
 ## Data import and cleaning
 
 ```{ojs}
 // Data loader cell
-//TODO: Move this to s3 paths
 db = {
   let db = await DuckDBClient.of({
     cv_raw: FileAttachment("/data/economicReturns/faostat_prod_cv.parquet")
