--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,9 @@
 ---
 title: "Adaptation Atlas Notebooks"
 pagetitle: "Notebooks - Adaptation Atlas"
+format:
+  html:
+    css: "styles/index-cards.css"
 ---
 
 # Adaptation Atlas V2 Notebooks
@@ -13,118 +16,5 @@ pagetitle: "Notebooks - Adaptation Atlas"
 - [Notebook Translation Guide](docs/translation.qmd)
 
 ```{=html}
-<style>
-/* Notebook index grid */
-  .notebook-grid {
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 1rem;
-    margin: 1.5rem 0 2rem;
-  }
-
-  @media (max-width: 1100px) {
-    .notebook-grid {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
-
-  @media (max-width: 820px) {
-    .notebook-grid {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
-
-  @media (max-width: 540px) {
-    .notebook-grid {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  main a.notebook-card {
-    display: block;
-    color: #0f1912;
-    text-decoration: none;
-  }
-
-  main a.notebook-card,
-  main a.notebook-card:hover,
-  main a.notebook-card:focus-visible,
-  .notebook-card * {
-    text-decoration: none !important;
-  }
-
-  .notebook-card__image-wrap {
-    overflow: hidden;
-  }
-
-  .notebook-card__image {
-    display: block;
-    width: 100%;
-    aspect-ratio: 16 / 9;
-    object-fit: cover;
-    transition: opacity 160ms ease;
-  }
-
-  .notebook-card:hover .notebook-card__image,
-  .notebook-card:focus-visible .notebook-card__image {
-    opacity: 0.85;
-  }
-
-  .notebook-card__title {
-    margin: 0.5rem 0 0;
-    font-size: 1rem;
-    line-height: 1.35;
-    color: #111;
-  }
-</style>
-
-<script>
-  (async () => {
-    const grid = document.getElementById("notebook-grid");
-
-    try {
-      const response = await fetch("notebooks.json");
-      if (!response.ok) throw new Error("Unable to load notebook list.");
-
-      const data = await response.json();
-      const notebooks = (
-        Array.isArray(data)
-          ? data
-          : Array.isArray(data?.notebooks)
-          ? data.notebooks
-          : []
-      ).filter((nb) => !nb.hide);
-
-      if (!notebooks.length) {
-        grid.innerHTML = "<p>No notebooks found.</p>";
-        return;
-      }
-
-      const cards = notebooks
-        .map((nb) => {
-          const image = nb.image || "images/default_crop.webp";
-          const titleEn = (nb.title && nb.title.en) || nb.id || "Notebook";
-          const href =
-            typeof nb.path === "string"
-              ? nb.path.replace(".qmd", ".html")
-              : nb.path;
-
-          return `
-            <a class="notebook-card" href="${href}">
-              <div class="notebook-card__image-wrap">
-                <img class="notebook-card__image" src="${image}" alt="${titleEn}">
-              </div>
-              <h3 class="notebook-card__title">${titleEn}</h3>
-            </a>
-          `;
-        })
-        .join("");
-
-      grid.innerHTML = cards;
-    } catch (err) {
-      grid.innerHTML = "<p>Error loading notebooks. Please try again later.</p>";
-      console.error(err);
-    }
-  })();
-</script>
+<script src="components/indexCards.js"></script>
 ```
